--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -38,8 +38,8 @@
             </div>
             <div class="top-bar-right">
                 <div class="top-bar-social">
-                    <a href="https://www.facebook.com/idpmindonesia" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/idpmindonesia/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/padinusantara" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/padinusantara/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     {% if user.is_authenticated %}
                         <a href="{% url 'app:dashboard' %}"><i class="fas fa-user"></i></a>
                     {% else %}
@@ -54,7 +54,7 @@
         <div class="main-header-container">
             <div class="logo">
                 <a href="{% url 'index' %}">
-                    <img src="/media/logo/logos.png" alt="FEBRUNM Logo">
+                    <img src="/media/logo/logo.png" alt="{{ webname }}" />
                 </a>
             </div>
             <button class="hamburger-menu" aria-label="Toggle navigation menu">
@@ -68,18 +68,29 @@
                         <ul class="dropdown">
                             <li><a href="/page/about-us">About Us</a></li>
                             <li><a href="/page/visi-misi">Visi & Misi</a></li>
-                            <li><a href="/page/struktur-organisasi">Struktur Organisasi</a></li>
+                            <li><a href="/page/contact-us">Contact Us</a></li>
                         </ul>
                     </li>
-                    <li><a href="{% url 'page_detail' 'produk-hukum' %}">Produk Hukum</a></li>
                     <li class="has-dropdown">
-                        <a href="#">Program Kerja<i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                        <a href="#">Article <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <ul class="dropdown">
-                            <li><a href="{% url 'page_detail' 'kegiatan-ilmiah' %}">2025-2029</a></li>
+                            <li><a href="/category/an-insight/">An Insight</a></li>
+                            <li><a href="/category/expert-article/">Expert Article</a></li>
+                            <li><a href="/category/straight-news/">Straight News</a></li>
+                            <li><a href="/category/publication-resources/">Publication Resources</a></li>
                         </ul>
                     </li>
-                    <li><a href="{% url 'page_detail' 'e-library' %}">e-Library</a></li>
+                    <li class="has-dropdown">
+                        <a href="#">Our Products <i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                        <ul class="dropdown">
+                            <li><a href="/products/">All Our Products</a></li>
+                            <li><a href="/product/buku/">Buku</a></li>
+                            <li><a href="/product/templates/">Templates</a></li>
+                            <li><a href="/product/website/">Websites</a></li>
+                        </ul>
+                    </li>
                     <li><a href="{% url 'page_detail' 'kerja-sama' %}">Networking & Collaboration</a></li>
+                    <li><a href="{% url 'page_detail' 'career' %}">Career</a></li>
                 </ul>
                 <button class="search-button" onclick="window.location.href='{% url 'article_list' %}'" aria-label="Search">
                     <i class="fas fa-search"></i>
@@ -93,7 +104,7 @@
         <div class="footer-grid">
             <div class="footer-col">
                 <div class="footer-logo">
-                  <img src="/media/logo/logos.png" style="width: 180px;" alt="FEBRUNM Logo">
+                  <img src="/media/logo/logo.png" style="width: 180px;" alt="{{ webname }}" />
                 </div>
                 <div class="social-links">
                     <a href="#"><i class="ri-facebook-fill"></i></a>
@@ -107,14 +118,14 @@
                 <ul>
                     <li><a href="{% url 'page_detail' 'about-us' %}">About Us</a></li>
                     <li><a href="{% url 'page_detail' 'visi-misi' %}">Visi & Misi</a></li>
-                    <li><a href="{% url 'page_detail' 'contact' %}">Contact</a></li>
+                    <li><a href="{% url 'page_detail' 'contact-us' %}">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="{% url 'page_detail' 'panduan-skripsi' %}">Daftar Anggota</a></li>
-                    <li><a href="{% url 'page_detail' 'template-dokumen' %}">Template Dokumen</a></li>
+                    <li><a href="/products/">Our Products</a></li>
+                    <li><a href="/page/kerja-sama/">Networking</a></li>
                     <li><a href="{% url 'page_detail' 'faq' %}">FAQ</a></li>
                 </ul>
             </div>
@@ -139,6 +150,14 @@
         </div>
     </div>
 </footer>
+<script>
+    function toggleCard(card) {
+    card.classList.toggle('flipped');
+}
+</script>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="/static/js/SlideTestimoni.js" ></script>
 <script src="/static/js/web_js.js?v={{ STATIC_VERSION }}"></script>
 <script src="/static/js/swiper.js?v={{ STATIC_VERSION }}"></script>
 </body>
